--- a/honeytoast-app/src/components/Navbar.css
+++ b/honeytoast-app/src/components/Navbar.css
@@ -1,5 +1,18 @@
+.app-name {
+    color: #1a561a;
+    font-size: 2rem;
+    font-weight: bold;
+    margin-left: 30px;
+    justify-content: center;
+}
+
+.fabar {
+    margin-left: 33px;
+    color: #1E8449;
+}
+
 .navbar {
-  background-color: #060b26;
+  background-color: #E1AD01;
   height: 80px;
   display: flex;
   justify-content: start;
@@ -7,13 +20,14 @@
 }
 
 .menu-bars {
-  margin-left: 2rem;
+  padding-left: 14px;
   font-size: 2rem;
   background: none;
+  justify-content: center;
 }
 
 .nav-menu {
-  background-color: #060b26;
+  background-color: #134013;
   width: 250px;
   height: 100vh;
   display: flex;
@@ -46,7 +60,7 @@
   height: 100%;
   display: flex;
   align-items: center;
-  padding: 0 16px;
+  padding: 0px 16px 0px 0px;
   border-radius: 4px;
 }
 
@@ -55,12 +69,13 @@
 }
 
 .nav-menu-items {
-  width: 100%;
+  width:100%;
+  padding-inline-start:25px;
 }
 
 .navbar-toggle {
-  background-color: #060b26;
-  width: 100%;
+  background-color: #134013;
+  width: 200px;
   height: 80px;
   display: flex;
   justify-content: start;
