Flight frontend can successfully call the Serapi Google Flights API, and passes API response to the OutboundFlightSelection page

--- a/honeytoast-app/src/pages/FlightPages/Flight.css
+++ b/honeytoast-app/src/pages/FlightPages/Flight.css
@@ -25,3 +25,9 @@ input {
     font-size: medium;
     font-family: 'Times New Roman', Times, serif;
 }
+
+.message {
+  text-align: center;
+  font-size: medium;
+  font-family: 'Times New Roman', Times, serif;
+}
