--- a/honeytoast-app/src/pages/Calendar.css
+++ b/honeytoast-app/src/pages/Calendar.css
@@ -23,7 +23,6 @@
 }
 
 .my-calendar-wrapper {
-    /* margin: 30px 100px; */
     flex: 0 0 65%;
     border-right: 1px solid #ddd;
     padding: 1rem;
@@ -49,4 +48,14 @@
     font-weight: 400;
     line-height: 1.5;
     vertical-align: middle;
+}
+
+input {
+    text-align: center;
+    width: 130px;
+    height: 15px;
+    margin: 5px;
+    padding: 5px;
+    font-size: medium;
+    font-family: 'Times New Roman', Times, serif;
 }
