Home page and navbar colour updated

--- a/honeytoast-app/src/components/Navbar.css
+++ b/honeytoast-app/src/components/Navbar.css
@@ -12,7 +12,7 @@
 }
 
 .navbar {
-  background-color: #E1AD01;
+  background-color: orange;
   height: 80px;
   display: flex;
   justify-content: start;
